test/applyk2.l1
applyk(printf,
       @lambda(r) { r; },
       @lambda() { error("throw"); },
       ["%s", 1000]);
